<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.jwebmp</groupId>
        <artifactId>jwebmp-parent</artifactId>
        <version>0.0.0_0-SNAPSHOT</version>
    </parent>

    <groupId>com.jwebmp.jre11</groupId>
    <artifactId>btm</artifactId>
    <name>JPMS Bitronix Transaction Manager :: Core</name>
    <packaging>bundle</packaging>

    <organization>
        <name>Bitronix Software</name>
        <url>http://bitronix.be/</url>
    </organization>

    <issueManagement>
        <system>github</system>
        <url>https://github.com/bitronix/btm/issues</url>
    </issueManagement>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>http://apache.org/licenses/LICENSE-2.0</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <scm>
        <url>git@github.com:bitronix/btm.git</url>
        <connection>scm:git:git@github.com/bitronix/btm.git</connection>
        <developerConnection>scm:git:git@github.com:bitronix/btm.git</developerConnection>
    </scm>

    <developers>
        <developer>
            <id>lorban</id>
            <name>Ludovic Orban</name>
        </developer>
        <developer>
            <id>brettwooldridge</id>
            <name>Brett Wooldridge</name>
        </developer>
    </developers>

    
    <dependencies>
        <dependency>
            <groupId>org.javassist</groupId>
            <artifactId>javassist</artifactId>
            <scope>provided</scope>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-all</artifactId>
            <version>1.8.5</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.8.2</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.apache.felix</groupId>
            <artifactId>org.osgi.core</artifactId>
            <version>1.0.0</version>
            <scope>provided</scope>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>javax.jms</groupId>
            <artifactId>jms</artifactId>
            <version>1.1</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.0.0</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>cglib</groupId>
            <artifactId>cglib</artifactId>
            <version>3.2.9</version>
            <scope>provided</scope>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.8.0-beta2</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>jcl-over-slf4j</artifactId>
            <version>1.7.5</version>
        </dependency>

        <dependency>
            <groupId>org.jboss.spec.javax.rmi</groupId>
            <artifactId>jboss-rmi-api_1.0_spec</artifactId>
            <version>1.0.6.Final</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>javax.transaction</groupId>
            <artifactId>javax.transaction-api</artifactId>
            <type>jar</type>
            <version>${javax.transaction.transactionapi}</version>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <id>jdk11</id>
            <properties>
                <jdk.version>1.11</jdk.version>
                <maven.compiler.source>1.11</maven.compiler.source>
                <maven.compiler.target>1.11</maven.compiler.target>
                <maven.compiler.release>11</maven.compiler.release>
            </properties>
        </profile>
    </profiles>
</project>
